--- a/Python_for_data_science/Recommeder_system.ipynb
+++ b/Python_for_data_science/Recommeder_system.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +64,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
        "      <th>rating</th>\n",
        "      <th>timestamp</th>\n",
        "    </tr>\n",
@@ -71,30 +72,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>50</td>\n",
        "      <td>5</td>\n",
        "      <td>881250949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
        "      <td>172</td>\n",
        "      <td>5</td>\n",
        "      <td>881250949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
        "      <td>133</td>\n",
        "      <td>1</td>\n",
        "      <td>881250949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>196</th>\n",
+       "      <th>3</th>\n",
+       "      <td>196</td>\n",
        "      <td>242</td>\n",
        "      <td>3</td>\n",
        "      <td>881250949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>186</th>\n",
+       "      <th>4</th>\n",
+       "      <td>186</td>\n",
        "      <td>302</td>\n",
        "      <td>3</td>\n",
        "      <td>891717742</td>\n",
@@ -104,23 +110,240 @@
        "</div>"
       ],
       "text/plain": [
-       "     user_id  rating  timestamp\n",
-       "0         50       5  881250949\n",
-       "0        172       5  881250949\n",
-       "0        133       1  881250949\n",
-       "196      242       3  881250949\n",
-       "186      302       3  891717742"
+       "   user_id  item_id  rating  timestamp\n",
+       "0        0       50       5  881250949\n",
+       "1        0      172       5  881250949\n",
+       "2        0      133       1  881250949\n",
+       "3      196      242       3  881250949\n",
+       "4      186      302       3  891717742"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "column_names = ['user_id', 'rating', 'timestamp']\n",
+    "column_names = ['user_id', 'item_id', 'rating', 'timestamp']\n",
     "data = pd.read_csv('Data/u.data', sep='\\t', names=column_names)\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100003, 3)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>GoldenEye (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Four Rooms (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Get Shorty (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Copycat (1995)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   item_id              title\n",
+       "0        1   Toy Story (1995)\n",
+       "1        2   GoldenEye (1995)\n",
+       "2        3  Four Rooms (1995)\n",
+       "3        4  Get Shorty (1995)\n",
+       "4        5     Copycat (1995)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_titles = pd.read_csv('Data/Movie_Id_Titles')\n",
+    "movie_titles.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1682, 2)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_titles.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>881250949</td>\n",
+       "      <td>Star Wars (1977)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>290</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>880473582</td>\n",
+       "      <td>Star Wars (1977)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>79</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4</td>\n",
+       "      <td>891271545</td>\n",
+       "      <td>Star Wars (1977)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>888552084</td>\n",
+       "      <td>Star Wars (1977)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>879362124</td>\n",
+       "      <td>Star Wars (1977)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  item_id  rating  timestamp             title\n",
+       "0        0       50       5  881250949  Star Wars (1977)\n",
+       "1      290       50       5  880473582  Star Wars (1977)\n",
+       "2       79       50       4  891271545  Star Wars (1977)\n",
+       "3        2       50       5  888552084  Star Wars (1977)\n",
+       "4        8       50       5  879362124  Star Wars (1977)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# merge the datasets into one dataframe\n",
+    "df = pd.merge(data, movie_titles, on= 'item_id')\n",
+    "df.head()"
    ]
   },
   {
