--- a/Python_for_data_science/Recommeder_system.ipynb
+++ b/Python_for_data_science/Recommeder_system.ipynb
@@ -374,28 +374,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "title\n",
-       "They Made Me a Criminal (1939)                5.0\n",
-       "Marlene Dietrich: Shadow and Light (1996)     5.0\n",
-       "Saint of Fort Washington, The (1993)          5.0\n",
-       "Someone Else's America (1995)                 5.0\n",
-       "Star Kid (1997)                               5.0\n",
+       "They Made Me a Criminal (1939)                       5.0\n",
+       "Marlene Dietrich: Shadow and Light (1996)            5.0\n",
+       "Saint of Fort Washington, The (1993)                 5.0\n",
+       "Someone Else's America (1995)                        5.0\n",
+       "Star Kid (1997)                                      5.0\n",
+       "Great Day in Harlem, A (1994)                        5.0\n",
+       "Aiqing wansui (1994)                                 5.0\n",
+       "Santa with Muscles (1996)                            5.0\n",
+       "Prefontaine (1997)                                   5.0\n",
+       "Entertaining Angels: The Dorothy Day Story (1996)    5.0\n",
        "Name: rating, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('title')['rating'].mean().sort_values(ascending=False).head()"
+    "df.groupby('title')['rating'].mean().sort_values(ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>'Til There Was You (1997)</th>\n",
+       "      <td>2.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1-900 (1994)</th>\n",
+       "      <td>2.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101 Dalmatians (1996)</th>\n",
+       "      <td>2.908257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12 Angry Men (1957)</th>\n",
+       "      <td>4.344000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187 (1997)</th>\n",
+       "      <td>3.024390</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             rating\n",
+       "title                              \n",
+       "'Til There Was You (1997)  2.333333\n",
+       "1-900 (1994)               2.600000\n",
+       "101 Dalmatians (1996)      2.908257\n",
+       "12 Angry Men (1957)        4.344000\n",
+       "187 (1997)                 3.024390"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings = pd.DataFrame(df.groupby('title')['rating'].mean())\n",
+    "ratings.head()"
    ]
   },
   {
