--- a/Python_for_data_science/Recommeder_system.ipynb
+++ b/Python_for_data_science/Recommeder_system.ipynb
@@ -483,10 +483,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "      <th>num of ratings</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>'Til There Was You (1997)</th>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1-900 (1994)</th>\n",
+       "      <td>2.600000</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101 Dalmatians (1996)</th>\n",
+       "      <td>2.908257</td>\n",
+       "      <td>109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12 Angry Men (1957)</th>\n",
+       "      <td>4.344000</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187 (1997)</th>\n",
+       "      <td>3.024390</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             rating  num of ratings\n",
+       "title                                              \n",
+       "'Til There Was You (1997)  2.333333               9\n",
+       "1-900 (1994)               2.600000               5\n",
+       "101 Dalmatians (1996)      2.908257             109\n",
+       "12 Angry Men (1957)        4.344000             125\n",
+       "187 (1997)                 3.024390              41"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings['num of ratings'] = pd.DataFrame(df.groupby('title')['rating'].count())\n",
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Visualization\n"
+   ]
   }
  ],
  "metadata": {
