--- a/Python_for_data_science/Recommeder_system.ipynb
+++ b/Python_for_data_science/Recommeder_system.ipynb
@@ -644,6 +644,283 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>title</th>\n",
+       "      <th>'Til There Was You (1997)</th>\n",
+       "      <th>1-900 (1994)</th>\n",
+       "      <th>101 Dalmatians (1996)</th>\n",
+       "      <th>12 Angry Men (1957)</th>\n",
+       "      <th>187 (1997)</th>\n",
+       "      <th>2 Days in the Valley (1996)</th>\n",
+       "      <th>20,000 Leagues Under the Sea (1954)</th>\n",
+       "      <th>2001: A Space Odyssey (1968)</th>\n",
+       "      <th>3 Ninjas: High Noon At Mega Mountain (1998)</th>\n",
+       "      <th>39 Steps, The (1935)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Yankee Zulu (1994)</th>\n",
+       "      <th>Year of the Horse (1997)</th>\n",
+       "      <th>You So Crazy (1994)</th>\n",
+       "      <th>Young Frankenstein (1974)</th>\n",
+       "      <th>Young Guns (1988)</th>\n",
+       "      <th>Young Guns II (1990)</th>\n",
+       "      <th>Young Poisoner's Handbook, The (1995)</th>\n",
+       "      <th>Zeus and Roxanne (1997)</th>\n",
+       "      <th>unknown</th>\n",
+       "      <th>Á köldum klaka (Cold Fever) (1994)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 1664 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "title    'Til There Was You (1997)  1-900 (1994)  101 Dalmatians (1996)  \\\n",
+       "user_id                                                                   \n",
+       "0                              NaN           NaN                    NaN   \n",
+       "1                              NaN           NaN                    2.0   \n",
+       "2                              NaN           NaN                    NaN   \n",
+       "3                              NaN           NaN                    NaN   \n",
+       "4                              NaN           NaN                    NaN   \n",
+       "\n",
+       "title    12 Angry Men (1957)  187 (1997)  2 Days in the Valley (1996)  \\\n",
+       "user_id                                                                 \n",
+       "0                        NaN         NaN                          NaN   \n",
+       "1                        5.0         NaN                          NaN   \n",
+       "2                        NaN         NaN                          NaN   \n",
+       "3                        NaN         2.0                          NaN   \n",
+       "4                        NaN         NaN                          NaN   \n",
+       "\n",
+       "title    20,000 Leagues Under the Sea (1954)  2001: A Space Odyssey (1968)  \\\n",
+       "user_id                                                                      \n",
+       "0                                        NaN                           NaN   \n",
+       "1                                        3.0                           4.0   \n",
+       "2                                        NaN                           NaN   \n",
+       "3                                        NaN                           NaN   \n",
+       "4                                        NaN                           NaN   \n",
+       "\n",
+       "title    3 Ninjas: High Noon At Mega Mountain (1998)  39 Steps, The (1935)  \\\n",
+       "user_id                                                                      \n",
+       "0                                                NaN                   NaN   \n",
+       "1                                                NaN                   NaN   \n",
+       "2                                                1.0                   NaN   \n",
+       "3                                                NaN                   NaN   \n",
+       "4                                                NaN                   NaN   \n",
+       "\n",
+       "title    ...  Yankee Zulu (1994)  Year of the Horse (1997)  \\\n",
+       "user_id  ...                                                 \n",
+       "0        ...                 NaN                       NaN   \n",
+       "1        ...                 NaN                       NaN   \n",
+       "2        ...                 NaN                       NaN   \n",
+       "3        ...                 NaN                       NaN   \n",
+       "4        ...                 NaN                       NaN   \n",
+       "\n",
+       "title    You So Crazy (1994)  Young Frankenstein (1974)  Young Guns (1988)  \\\n",
+       "user_id                                                                      \n",
+       "0                        NaN                        NaN                NaN   \n",
+       "1                        NaN                        5.0                3.0   \n",
+       "2                        NaN                        NaN                NaN   \n",
+       "3                        NaN                        NaN                NaN   \n",
+       "4                        NaN                        NaN                NaN   \n",
+       "\n",
+       "title    Young Guns II (1990)  Young Poisoner's Handbook, The (1995)  \\\n",
+       "user_id                                                                \n",
+       "0                         NaN                                    NaN   \n",
+       "1                         NaN                                    NaN   \n",
+       "2                         NaN                                    NaN   \n",
+       "3                         NaN                                    NaN   \n",
+       "4                         NaN                                    NaN   \n",
+       "\n",
+       "title    Zeus and Roxanne (1997)  unknown  Á köldum klaka (Cold Fever) (1994)  \n",
+       "user_id                                                                        \n",
+       "0                            NaN      NaN                                 NaN  \n",
+       "1                            NaN      4.0                                 NaN  \n",
+       "2                            NaN      NaN                                 NaN  \n",
+       "3                            NaN      NaN                                 NaN  \n",
+       "4                            NaN      NaN                                 NaN  \n",
+       "\n",
+       "[5 rows x 1664 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_mat = df.pivot_table(index='user_id', columns='title', values='rating')\n",
+    "movie_mat.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
