--- a/Python_for_data_science/Recommeder_system.ipynb
+++ b/Python_for_data_science/Recommeder_system.ipynb
@@ -1275,6 +1275,184 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Correlation</th>\n",
+       "      <th>num of ratings</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>'Til There Was You (1997)</th>\n",
+       "      <td>0.872872</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1-900 (1994)</th>\n",
+       "      <td>-0.645497</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101 Dalmatians (1996)</th>\n",
+       "      <td>0.211132</td>\n",
+       "      <td>109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12 Angry Men (1957)</th>\n",
+       "      <td>0.184289</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187 (1997)</th>\n",
+       "      <td>0.027398</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Correlation  num of ratings\n",
+       "title                                                 \n",
+       "'Til There Was You (1997)     0.872872               9\n",
+       "1-900 (1994)                 -0.645497               5\n",
+       "101 Dalmatians (1996)         0.211132             109\n",
+       "12 Angry Men (1957)           0.184289             125\n",
+       "187 (1997)                    0.027398              41"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter out movies\n",
+    "corr_starwars = corr_starwars.join(ratings['num of ratings'])\n",
+    "corr_starwars.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Correlation</th>\n",
+       "      <th>num of ratings</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Star Wars (1977)</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Empire Strikes Back, The (1980)</th>\n",
+       "      <td>0.748353</td>\n",
+       "      <td>368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Return of the Jedi (1983)</th>\n",
+       "      <td>0.672556</td>\n",
+       "      <td>507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Raiders of the Lost Ark (1981)</th>\n",
+       "      <td>0.536117</td>\n",
+       "      <td>420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Austin Powers: International Man of Mystery (1997)</th>\n",
+       "      <td>0.377433</td>\n",
+       "      <td>130</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    Correlation  \\\n",
+       "title                                                             \n",
+       "Star Wars (1977)                                       1.000000   \n",
+       "Empire Strikes Back, The (1980)                        0.748353   \n",
+       "Return of the Jedi (1983)                              0.672556   \n",
+       "Raiders of the Lost Ark (1981)                         0.536117   \n",
+       "Austin Powers: International Man of Mystery (1997)     0.377433   \n",
+       "\n",
+       "                                                    num of ratings  \n",
+       "title                                                               \n",
+       "Star Wars (1977)                                               584  \n",
+       "Empire Strikes Back, The (1980)                                368  \n",
+       "Return of the Jedi (1983)                                      507  \n",
+       "Raiders of the Lost Ark (1981)                                 420  \n",
+       "Austin Powers: International Man of Mystery (1997)             130  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_starwars[corr_starwars['num of ratings'] > 100].sort_values('Correlation', ascending=False).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
